--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -826,7 +826,12 @@
         "        return size\n",
         "    else:\n",
         "        return 0\n",
-        "  \n",
+        "\n",
+        "def compare_files_with_size(file1, file2):\n",
+        "    if not (os.path.isfile(file1) and os.path.isfile(file2)):\n",
+        "        return False\n",
+        "    return os.path.getsize(file1) == os.path.getsize(file2)\n",
+        "\n",
         "def is_hidden(path):\n",
         "    return True if path[0] == '.' else False\n",
         "\n",
@@ -1103,6 +1108,11 @@
         "\n",
         "#### API / abstraction \n",
         "\n",
+        "REPLACE_DOWNLOAD = 'REPLACE'\n",
+        "MERGE_DOWNLOAD = 'MERGE'\n",
+        "CANCEL_DOWNLOAD = 'CANCEL'\n",
+        "RENAME_DOWNLOAD = 'RENAME'\n",
+        "\n",
         "#url_pt = re.compile(r\"^((http[s]?):\\/\\/)?([^:\\/\\s]+)((\\/\\w+\\/)*\\/)([\\w\\-\\.]+[^#?\\s]+)(.*)?(#[\\w\\-]+)?\")\n",
         "#sm_pt = re.compile(r\"(?<=Shareddrives\\/)[A-Z]*(?=\\/)\")\n",
         "#sn2num_pt = re.compile(r\"[1-9][0-9]?(?=[Xx]\\d{1,2}\\b)\")\n",
@@ -1119,7 +1129,6 @@
         "season_pt0 = re.compile(r\"([S,s]|([S,s]easons?\\s?))\\d{1,2}\")\n",
         "season_pt1 = re.compile(r\"\\b([S,s]|[S,s]eason([\\s,\\.]?))\\d{1,2}\")\n",
         "season_number_pt = re.compile(r\"([1-9][0-9]?)\")\n",
-        "del_pt = re.compile(r\"\\.del\\d*\\/\")\n",
         "sd_pt = re.compile(r\"(\\/content\\/drive\\/Shareddrives\\/)[A-Za-z0-9]+(?=\\/)\")\n",
         "imdbcount_pt = re.compile(r\"\\d+(?=\\stitles?)\")\n",
         "l337xpages_pt = re.compile(r'(?<=/)\\d+(?=/)')\n",
@@ -1127,10 +1136,10 @@
         "director_pt = re.compile(r\"(((?<=Director:)<a href.*</a>)|((?<=Directors:)<a href.*</a>))(?=<span)\")\n",
         "\n",
         "class DownloadAttrs:\n",
-        "    def __init__(self, type_ = GENERAL, replace = False, backup = False, save_name = \"\", sequential= False, \n",
+        "    def __init__(self, type_ = GENERAL, existing_mode = False, backup = False, save_name = \"\", sequential= False, \n",
         "        uncomplete_source = \"\", imdb_name = \"\", imdb_rating = \"\", imdb_votes = \"\", partial = False, name= '', torfile= ''):\n",
         "        self.type_ = type_ \n",
-        "        self.replace =  replace\n",
+        "        self.existing_mode =  existing_mode\n",
         "        self.backup =  backup\n",
         "        self.save_name =  save_name\n",
         "        self.sequential = sequential \n",
@@ -1148,7 +1157,7 @@
         "    partial = False\n",
         "    backup = False\n",
         "    completed = False\n",
-        "    replace = False\n",
+        "    existing_mode = MERGE_DOWNLOAD\n",
         "    ready = False\n",
         "    name = \"\"\n",
         "    hash = ''\n",
@@ -1191,13 +1200,13 @@
         "    selectedfilenames = None\n",
         "    total_downloaded = 0\n",
         "    verify_download = None\n",
-        "    old_files = None\n",
+        "    old_files_dirs = None\n",
         "    hasmetadata = False\n",
         "    addmethod = None\n",
         "    \n",
         "    def copy(self):\n",
         "        return DownloadAttrs(type_= self.type_,\n",
-        "                    replace= self.replace,\n",
+        "                    existing_mode= self.existing_mode,\n",
         "                    backup= self.backup,\n",
         "                    sequential= self.sequential,\n",
         "                    uncomplete_source= self.uncomplete_source,\n",
@@ -1883,9 +1892,10 @@
         "        show = name_show(attrs.name, attrs.quality)\n",
         "        season = get_season(attrs.name)\n",
         "        searchresult = episode_exists(show, season, newname)        \n",
-        "        backuppathes = get_episode_backup_pathes(show, season)\n",
         "        if searchresult:\n",
         "            show = searchresult['foundshow']\n",
+        "        savepath = path_season(show, season)\n",
+        "        backuppathes = get_episode_backup_pathes(show, season)\n",
         "        attrs.show = show\n",
         "        attrs.season = season\n",
         "        attrs.save_path = path_season(show, season)\n",
@@ -1986,7 +1996,13 @@
         "        if splited[1] == \".torrent\":\n",
         "            info(f\"Found a file to download: {file}\")\n",
         "            return add_download(attrs) # add multi file isn't correct\n",
-        "    \n",
+        "\n",
+        "def get_adddownload_error(result: AddResult, message):\n",
+        "    error(message)\n",
+        "    result.status = ADDERROR\n",
+        "    result.errormessage = message\n",
+        "    return result\n",
+        "\n",
         "def add_download(attrs: DownloadAttrs):\n",
         "    if not (attrs.add_source == LOCALFILE_ADDSOURCE or attrs.add_source == MAGNET_ADDSOURCE):\n",
         "        raise(\"add_source should be LOCALFILE_ADDSOURCE or MAGNET_ADDSOURCE\")\n",
@@ -1994,27 +2010,16 @@
         "    result.attrs = attrs\n",
         "    appstate.addresults.append(result)  \n",
         "    if attrs.add_source == MAGNET_ADDSOURCE and not attrs.magnet:\n",
-        "        err = f\"Magnet is empty. {attrs.name}\"\n",
-        "        error(err)\n",
-        "        result.status = ADDERROR\n",
-        "        result.errormessage = err\n",
-        "        return result\n",
+        "        return get_adddownload_error(result, f\"Download magnet is empty. {attrs.name}\")\n",
         "    if attrs.add_source == LOCALFILE_ADDSOURCE and (not attrs.torfile or not os.path.isfile(attrs.torfile)):\n",
-        "        err = f\"Tor file path is empty, or file doesn't exists {attrs.name}\"\n",
-        "        error(err)\n",
-        "        result.status = ADDERROR\n",
-        "        result.errormessage = err\n",
-        "        return result\n",
+        "        return get_adddownload_error(result, f\"Tor file path is empty, or file doesn't exists {attrs.name}\")\n",
         "    try:\n",
         "        if attrs.add_source == LOCALFILE_ADDSOURCE:\n",
         "            ti = lt.torrent_info(attrs.torfile)\n",
         "            infohash_sha1 = ti.info_hash()\n",
         "            attrs.name = ti.name()\n",
         "            if not ti.is_valid():\n",
-        "                result.status = ADDERROR\n",
-        "                result.errormessage = f\"Invalid torrent: {attrs.name}\"\n",
-        "                error(result.errormessage)\n",
-        "                return result\n",
+        "                return get_adddownload_error(result, f\"Invalid torrent: {attrs.name}\")\n",
         "            result.selectedfiles_count = ti.num_files()\n",
         "            params = {\"save_path\": temp_save, \"ti\": ti}\n",
         "        else:\n",
@@ -2030,31 +2035,28 @@
         "                result.status = ADDPENDING\n",
         "                replace_download_decision(prep)\n",
         "                return result\n",
+        "        sha1keystr = str(infohash_sha1)\n",
+        "        result.name = attrs.name\n",
+        "        #result.handle = handle\n",
+        "        result.files = [] \n",
+        "        info(f\"Download info: {attrs.name}\\nHash: {sha1keystr}\")\n",
+        "        if sha1keystr in downloads_dict:\n",
+        "            return get_adddownload_error(result, f\"{attrs.name} is already added.\")\n",
         "        handlecheck = ses.find_torrent(infohash_sha1)\n",
         "        if handlecheck.is_valid():\n",
         "            ses.remove_torrent(handlecheck)\n",
         "        handle: lt.torrent_handle = ses.add_torrent(params)\n",
         "        handle.name = attrs.name\n",
         "        if not handle.is_valid():\n",
-        "            result.status = ADDERROR\n",
-        "            result.errormessage = f\"Invalid torrent {attrs.name}\"\n",
-        "            error(f\"Invalid torrent {attrs.name}\")\n",
-        "            return result\n",
-        "        key = str(handle.info_hash())\n",
-        "        result.name = attrs.name\n",
+        "            return get_adddownload_error(result, f\"Invalid torrent {attrs.name}\")\n",
         "        result.handle = handle\n",
-        "        result.files = [] \n",
-        "        info(f\"Download info: {attrs.name}\\nHash: {key}\")\n",
-        "        if key in downloads_dict:\n",
-        "            result.status = ADDERROR\n",
-        "            result.errormessage = f\"{attrs.name} is already added.\"\n",
-        "            error(result.errormessage)\n",
-        "            return result\n",
-        "        result.hash = key\n",
+        "        result.hash = sha1keystr\n",
         "        result.savepath = attrs.save_path\n",
         "        result.savename = attrs.save_name\n",
+        "        attrs.hash = sha1keystr\n",
         "        handle.attrs = attrs\n",
-        "        downloads_dict[key] = handle\n",
+        "        handle.progress = 0.0\n",
+        "        downloads_dict[sha1keystr] = handle\n",
         "        add_trackers(handle)\n",
         "        torrentfile = handle.torrent_file()\n",
         "        if torrentfile:\n",
@@ -2066,7 +2068,8 @@
         "            handle.attrs.hasmetadata = False\n",
         "            result.hasmetadata = False\n",
         "        if attrs.add_source == LOCALFILE_ADDSOURCE:\n",
-        "            !mv \"$attrs.torfile\" \"$added_path\"\n",
+        "            cmd = f'mv \"{attrs.torfile}\" \"{added_path}\"'\n",
+        "            !$cmd\n",
         "        result.status = ADDSUCCUSS\n",
         "        result.succussmessage = \"Added Successfully \" + attrs.name\n",
         "        info(f\"{attrs.name} is added succussfully. Save name: {attrs.save_name}\")\n",
@@ -2074,17 +2077,15 @@
         "    except Exception as e:\n",
         "        error(ex())\n",
         "        updatestatushtml('An error happend while adding download.', ERROR_EVENT)\n",
-        "    result.status = ADDERROR\n",
-        "    result.errormessage = f\"Download wasn't added {attrs.name}\"\n",
-        "    warning(f\"{attrs.name} wasn't added.\")\n",
-        "    return result\n",
+        "        return get_adddownload_error(result, f\"Download wasn't added {attrs.name}\")\n",
         "\n",
         "def add_hash_download(hash, attrs: DownloadAttrs, name = ''):\n",
         "    if not name:\n",
         "        name = hash\n",
         "    download_link = f\"https://itorrents.org/torrent/{hash}.torrent\"\n",
         "    filename = f\"/content/{name}.torrent\"\n",
-        "    !wget \"$download_link\" -O \"$filename\" $NULL_STREAM \n",
+        "    cmd = f'wget \"{download_link}\" -O \"{filename}\" {NULL_STREAM}'\n",
+        "    !$cmd\n",
         "    attrs.torfile = filename\n",
         "    attrs.add_source = LOCALFILE_ADDSOURCE\n",
         "    return add_download(attrs)\n",
@@ -3431,7 +3432,7 @@
         "\n",
         "def move_download_old_files(attrs: DownloadAttrs): #disabled temporarly \n",
         "    info(f'Cleaning distination for: {attrs.save_name}')\n",
-        "    attrs.old_files = set()\n",
+        "    attrs.old_files_dirs = set()\n",
         "    delstr = '.replaced-' + nowstr()\n",
         "    if 1 <= attrs.type_/TV < 1.1 :\n",
         "        for diritem in attrs.downloaded_diritems: #diritem is tuple of a dir and its content\n",
@@ -3447,67 +3448,20 @@
         "                        cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
         "                        output = !$cmd\n",
         "                        if output:  error(lines = output)\n",
-        "                        attrs.old_files.add(oldfiletemppath)\n",
+        "                        attrs.old_files_dirs.add(oldfiletemppath)\n",
         "                        info(f'Old file added: {lookup1[\"foundname\"]}')\n",
-        "                        if attrs.backup and attrs.baksv:                    #fixbackup\n",
-        "                            for bkdir in range(len(attrs.baksv)):\n",
-        "                                oldfilepath = f\"{bkdir}/filename\"       \n",
-        "                                if os.path.exists(oldfilepath):\n",
-        "                                    oldfiletemppath = \"bk\"\n",
-        "                                    if not os.path.isdir(oldfiletemppath):      os.makedirs(oldfiletemppath)\n",
-        "                                    info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
-        "                                    cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
-        "                                    output = !$cmd \n",
-        "                                    if output:  info(lines = output)\n",
         "\n",
-        "    elif attrs.type_ == MOVIE:       \n",
-        "        for diritem in attrs.downloaded_diritems:\n",
-        "            targetdir = os.path.normpath(f\"{attrs.existing_path}/{diritem[0]}\")\n",
-        "            oldfiletemppath = os.path.normpath(f\"{attrs.existing_path}/{delstr}/{diritem[0]}\")\n",
-        "            os.makedirs(oldfiletemppath, exist_ok=True)\n",
-        "            for filename in diritem[1]:\n",
-        "                oldfilepath = f\"{targetdir}/{filename}\"\n",
-        "                if os.path.isfile(oldfilepath):\n",
-        "                    info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
-        "                    cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
-        "                    output = !$cmd\n",
-        "                    if output:  error(lines = output)\n",
-        "                    attrs.old_files.add(oldfiletemppath)\n",
-        "                    info(f'Old file added: {oldfilepath}')\n",
-        "                    if attrs.backup and attrs.baksv:                                #fixbackup\n",
-        "                        for oldfilepath in len(attrs.baksv):\n",
-        "                            if os.path.exists(oldfilepath):\n",
-        "                                oldfiletemppath = \"bk\"\n",
-        "                                if not os.path.isdir(oldfiletemppath):\n",
-        "                                    os.makedirs(oldfiletemppath)\n",
-        "                                info(f'Moving: {oldfilepath} to {oldfiletemppath}')\n",
-        "                                cmd = f'mv \"{oldfilepath}\" \"{oldfiletemppath}\"'\n",
-        "                                output = !$cmd\n",
-        "                                if output:  info(lines = output)         \n",
+        "    elif attrs.type_ == MOVIE:\n",
+        "        oldfiletemppath = os.path.normpath(f\"{attrs.existing_path}/{delstr}\")\n",
+        "        os.makedirs(oldfiletemppath, exist_ok=True)    \n",
+        "        info(f'Moving files in {attrs.existing_path} to {oldfiletemppath}')\n",
+        "        cmd = f'mv \"{attrs.existing_path}/\"* \"{oldfiletemppath}\"'\n",
+        "        output = !$cmd\n",
+        "        if output:  error(lines = output)\n",
+        "        attrs.old_files_dirs.add(oldfiletemppath)\n",
         "    info('Cleaning distination done.')\n",
         "    return\n",
         "    cmd\n",
-        "    \n",
-        "def pre_download_file_transfer(attrs: DownloadAttrs, donesavingpath):\n",
-        "    info(f\"Preparing transfer for: {donesavingpath}\\nSave dir: {attrs.target_save_dir}\\nFile transfer verification items:\")\n",
-        "    attrs.verify_download = []\n",
-        "    total_size = 0 \n",
-        "    diritems_str = \"\"\n",
-        "    for diritem in attrs.downloaded_diritems:\n",
-        "        dirbase = f\"/{diritem[0]}\" if diritem[0] else ''\n",
-        "        donedirpath = donesavingpath + dirbase\n",
-        "        savingtargetdirpath = attrs.target_save_dir + dirbase\n",
-        "        diritems_str += f\"In dir:  .{donedirpath}/\\n\"\n",
-        "        for filename in diritem[1]:\n",
-        "            donefilepath = f\"{donedirpath}/{filename}\"\n",
-        "            targetfilepath = f\"{savingtargetdirpath}/{filename}\"\n",
-        "            attrs.verify_download.append((donefilepath, targetfilepath))\n",
-        "            filesize = pathsize(donefilepath)\n",
-        "            sizestr = data_str(filesize)\n",
-        "            total_size += filesize\n",
-        "            diritems_str += f'{sizestr} {donefilepath}\\n{(len(sizestr) + 1)*\" \"}{targetfilepath}\\n'\n",
-        "    info(diritems_str)\n",
-        "    attrs.total_downloaded = total_size \n",
         "\n",
         "def verify_saving_download(attrs: DownloadAttrs):\n",
         "    fails = []\n",
@@ -3529,13 +3483,36 @@
         "        error(f\"Verification failed.\\nFailed items: {len(fails)}\\n{list_lines(fails, str = True)}\")\n",
         "    return False\n",
         "\n",
-        "def revert_download_file_transfer(delpaths, backup):\n",
+        "def revert_download_file_transfer(attrs: DownloadAttrs):\n",
         "    info('Reverting transfered files.')\n",
-        "    for path in delpaths:\n",
-        "        path0 = path + '/*'\n",
-        "        path1 = del_pt.sub('', path)\n",
-        "        mv(path0, path1, backup = backup)\n",
+        "    for replacedpath in attrs.old_files_dirs:\n",
+        "        replacedpath = os.path.normpath(replacedpath)\n",
+        "        cmd = f'mv \"{replacedpath}/\"* \"{os.path.dirname(replacedpath)}\"'\n",
+        "        !$cmd\n",
+        "        cmd = f'rm -r \"{replacedpath}\"'\n",
+        "        !$cmd \n",
         "    return\n",
+        "\n",
+        "def prepare_download_file_transfer(attrs: DownloadAttrs, donesavingpath):    # Matches download files with the target pathes for verification \n",
+        "    info(f\"Preparing transfer for: {donesavingpath}\\nSave dir: {attrs.target_save_dir}\\nFile transfer verification items:\")\n",
+        "    attrs.verify_download = []\n",
+        "    total_size = 0 \n",
+        "    diritems_str = \"\"\n",
+        "    for diritem in attrs.downloaded_diritems:\n",
+        "        dirbase = f\"/{diritem[0]}\" if diritem[0] else ''\n",
+        "        donedirpath = donesavingpath + dirbase\n",
+        "        savingtargetdirpath = attrs.target_save_dir + dirbase\n",
+        "        diritems_str += f\"In dir:  {donedirpath}/\\n\"\n",
+        "        for filename in diritem[1]:\n",
+        "            donefilepath = f\"{donedirpath}/{filename}\"\n",
+        "            targetfilepath = f\"{savingtargetdirpath}/{filename}\"\n",
+        "            attrs.verify_download.append((donefilepath, targetfilepath))\n",
+        "            filesize = pathsize(donefilepath)\n",
+        "            sizestr = data_str(filesize)\n",
+        "            total_size += filesize\n",
+        "            diritems_str += f'{sizestr} {donefilepath}\\n{(len(sizestr) + 1)*\" \"}{targetfilepath}\\n'\n",
+        "    info(diritems_str)\n",
+        "    attrs.total_downloaded = total_size \n",
         "\n",
         "def transfer_download_files(handle, copy= False):\n",
         "    handle.pause()\n",
@@ -3580,29 +3557,29 @@
         "        attrs.save_name = downloadname\n",
         "        donesavingpath = donesavingpath + attrs.save_name \n",
         "\n",
-        "    pre_download_file_transfer(attrs, donesavingpath)  \n",
+        "    prepare_download_file_transfer(attrs, donesavingpath)  \n",
         "    if attrs.type_ == EPISODE and os.path.isdir(donesavingpath):\n",
         "        donesavingpath = f'{donesavingpath}/' \n",
         "    if os.path.exists(donesavingpath):\n",
-        "        if attrs.replace and attrs.downloaded_diritems: \n",
+        "        if attrs.existing_mode == REPLACE_DOWNLOAD:\n",
         "            move_download_old_files(attrs) \n",
         "        info(f'Saving {attrs.save_name} to: {attrs.save_path}')\n",
-        "        merge_mode = \"--size-only \" if not attrs.replace else '' # -I for replacing files \n",
+        "        merge_mode = \"--size-only \" if attrs.existing_mode == MERGE_DOWNLOAD else '' # -I for replacing files \n",
         "        cmd = f'rsync {merge_mode}-r \"{donesavingpath}\" \"{attrs.save_path}\"'\n",
         "        output = !$cmd\n",
         "        if output:\n",
         "            error(lines= output)\n",
-        "            main_verification = False\n",
+        "            files_transfer_verification = False\n",
         "        else:\n",
-        "            main_verification = verify_saving_download(attrs)   \n",
+        "            files_transfer_verification = verify_saving_download(attrs)   \n",
         "        if attrs.backup and attrs.baksv:\n",
         "            for bkpath in attrs.baksv:\n",
         "                info(f'Copying {attrs.save_name} to: {bkpath}')\n",
-        "                cmd = f'!rsync {merge_mode}-r \"{donesavingpath}\" \"{bkpath}\"'\n",
+        "                cmd = f'rsync {merge_mode}-r \"{donesavingpath}\" \"{bkpath}\"'\n",
         "                output= !$cmd\n",
         "                if output:\n",
         "                    error(lines= output)\n",
-        "        if main_verification:\n",
+        "        if files_transfer_verification:\n",
         "            info(f'Deleting {donesavingpath}')\n",
         "            cmd = f'rm -r \"{donesavingpath}\"' \n",
         "            !$cmd\n",
@@ -3610,7 +3587,7 @@
         "                info(f'Deleting uncompleted source: {attrs.uncomplete_source}')\n",
         "                cmd = f'rm -r \"{attrs.uncomplete_source}\"'\n",
         "                !$cmd\n",
-        "            if attrs.replace and attrs.old_files: # TODO\n",
+        "            if attrs.existing_mode == REPLACE_DOWNLOAD: # TODO\n",
         "                #info('Deleting replaced files.')\n",
         "                #for oldfilepath in attrs.old_files: rm(oldfilepath, process_backup= attrs.backup) \n",
         "                pass\n",
@@ -3618,8 +3595,8 @@
         "            return True   \n",
         "        else:\n",
         "            print(\"Transfer verification failed.\")\n",
-        "            if attrs.replace and attrs.old_files:\n",
-        "                revert_download_file_transfer(attrs.old_files, attrs.backup)\n",
+        "            if attrs.existing_mode == REPLACE_DOWNLOAD:\n",
+        "                revert_download_file_transfer(attrs)\n",
         "            return False\n",
         "    else:\n",
         "        error(f\"Files for: {attrs.save_name} were not transfered.\")\n",
@@ -3741,12 +3718,11 @@
         "        btn.description = \"▷\"\n",
         "        info(f\"Download '{handle.name}' has been paused.\")\n",
         "\n",
-        "def remove_download(view):\n",
+        "def remove_download(downloadview):\n",
         "    stopmonitor()\n",
         "    try:\n",
-        "        handle = view.handle\n",
-        "        hash = str(handle.info_hash())\n",
-        "        remove_active_view(view)        \n",
+        "        handle = downloadview.handle\n",
+        "        remove_active_view(downloadview)        \n",
         "        status = handle.status()\n",
         "        handle.pause()\n",
         "\n",
@@ -3755,20 +3731,20 @@
         "        elif handle in completed:\n",
         "            completed.remove(handle)\n",
         "        ses.remove_torrent(handle)\n",
-        "        del downloads_dict[hash]\n",
+        "        del downloads_dict[handle.attrs.hash]\n",
         "\n",
         "        appstate.total_downloads -= 1\n",
+        "        appstate.total_wanted -= status.total_wanted\n",
         "        if handle.done:\n",
         "            appstate.completed -= 1\n",
-        "            appstate.completed_down -= status.total_wanted\n",
+        "            appstate.completed_down -= status.total_wanted_done\n",
+        "            appstate.completed_up -= status.total_upload\n",
         "        elif handle.dead:\n",
         "            appstate.deads -= 1\n",
-        "        appstate.total_wanted -= status.total_wanted\n",
         "\n",
         "        if not active:\n",
         "            update_download_stats_labels()\n",
         "        startmonitor()\n",
-        "        \n",
         "        info(f'{handle.name} was removed succussfully.')\n",
         "    except Exception as e:\n",
         "        error(f\"An error happened while removing {handle.name}\")\n",
@@ -3777,10 +3753,6 @@
         "    release()\n",
         "\n",
         "### UI API\n",
-        "\n",
-        "REPLACE_MERGE_DOWNLOAD_DECISION = 'REPLACE'\n",
-        "CANCEL_DOWNLOAD_DECISION = 'CANCEL'\n",
-        "RENAME_DOWNLOAD_DECISION = 'RENAME'\n",
         "\n",
         "class AlreadyDownloadedDecision:\n",
         "    def __init__(self, action, newname = ''):\n",
@@ -3845,15 +3817,13 @@
         "\n",
         "def already_downloaded_handler(userdecision: AlreadyDownloadedDecision, attrs: DownloadAttrs):\n",
         "    try:\n",
-        "        if userdecision.action == REPLACE_MERGE_DOWNLOAD_DECISION:\n",
-        "            attrs.replace = True\n",
-        "            switchview(nav[ADD_TAB], getloadingview(f'Adding download with {attrs.add_source}, merging and replacing olf files.'), temp= True)\n",
-        "        if userdecision.action == RENAME_DOWNLOAD_DECISION and userdecision.newname: \n",
-        "            attrs.save_name = userdecision.newname\n",
-        "            switchview(nav[ADD_TAB], getloadingview(f'Adding download with {attrs.add_source}, with new name.'), temp= True)\n",
-        "        elif userdecision.action == CANCEL_DOWNLOAD_DECISION:\n",
+        "        if userdecision.action == CANCEL_DOWNLOAD:\n",
         "            switchview(nav[ADD_TAB])\n",
         "            return False\n",
+        "        if userdecision.action == RENAME_DOWNLOAD and userdecision.newname: \n",
+        "            attrs.save_name = userdecision.newname\n",
+        "        attrs.existing_mode = userdecision.action\n",
+        "        switchview(nav[ADD_TAB], getloadingview(f'Adding download with {attrs.add_source}'), temp= True)\n",
         "        process_adddownload_result(add_download(attrs))\n",
         "    except Exception as e:\n",
         "        error(ex())\n",
@@ -4088,9 +4058,10 @@
         "    type_ = addtype_dropdown.value\n",
         "    backup = addbackup_checkbox.value\n",
         "    \n",
-        "    replace = addreplacemerge_checkbox.value\n",
+        "    replace = addreplace_checkbox.value\n",
+        "    existing_mode = REPLACE_DOWNLOAD if replace else MERGE_DOWNLOAD\n",
         "    customname = addcustomname_text.value\n",
-        "    attrs = DownloadAttrs(type_= type_, replace= replace, backup= backup, save_name= customname)\n",
+        "    attrs = DownloadAttrs(type_= type_, existing_mode= existing_mode, backup= backup, save_name= customname)\n",
         "    try:    \n",
         "        if addsource == LOCALFILE_ADDSOURCE:\n",
         "            result: AddResult = add_local_files(path= input_, attrs=  attrs)\n",
@@ -4115,17 +4086,17 @@
         "            process_adddownload_result(result)\n",
         "\n",
         "def search_handler(obj):\n",
-        "    type0 = searchtype_dropdown.value \n",
+        "    type_ = searchtype_dropdown.value \n",
         "    site = searchsite_dropdown.value \n",
         "    search = searchsearch_text.value.strip()\n",
-        "    switchview(nav[SEARCH_TAB], getloadingview(f'Search for {types[type0]} \"{search}\" site: {site} page: 1.'), temp= True)\n",
+        "    switchview(nav[SEARCH_TAB], getloadingview(f'Search for {types[type_]} \"{search}\" site: {site} page: 1.'), temp= True)\n",
         "    category = searchcategory_dropdown.value \n",
         "    sort = searchsort_dropdown.value  \n",
         "    order = searchorder_dropdown.value\n",
         "    saveas = searchsaveas_text.value\n",
-        "    replaceandmerge = searchreplaceandmerge_checkbox.value \n",
-        "\n",
-        "    attrs = DownloadAttrs(type_= type0, save_name= saveas, replace= replaceandmerge)\n",
+        "    replace = searchreplace_checkbox.value \n",
+        "    existing_mode = REPLACE_DOWNLOAD if replace else MERGE_DOWNLOAD\n",
+        "    attrs = DownloadAttrs(type_= type_, save_name= saveas, existing_mode= existing_mode)\n",
         "    if search:\n",
         "        search_process(site= site, search= search, attrs= attrs, category= category, sort= sort, order= order)\n",
         "\n",
@@ -4164,7 +4135,7 @@
         "    sites = [X1337X]\n",
         "    sitecategory = getsitecategory(type_category[type_], sites[0])\n",
         "    searchparameters = imdbsearchparams_text.value\n",
-        "    replaceandmerge = imdbreplaceandmergeoldfiles_checkbox.value \n",
+        "    replace = imdbreplaceandmergeoldfiles_checkbox.value \n",
         "\n",
         "    if type_ == MOVIE:\n",
         "        title_type = IMDB_MOVIE_TITLE\n",
@@ -4172,8 +4143,9 @@
         "        title_type = IMDB_TV_TITLE\n",
         "    else:\n",
         "        title_type = IMDB_ANY_TITLE\n",
+        "    existing_mode = REPLACE_DOWNLOAD if replace else MERGE_DOWNLOAD\n",
         "\n",
-        "    attrs = DownloadAttrs(type_= type_, replace= replaceandmerge,)\n",
+        "    attrs = DownloadAttrs(type_= type_, existing_mode= existing_mode,)\n",
         "    params = IMDBParams(keyword = keyword, titletype= title_type, startdate= startdate, enddate= enddate, minrating= minrating,\n",
         "                    maxrating= maxrating, minvotes= minvotes, maxvotes= maxvotes, minruntime= minruntime, maxruntime= maxruntime,\n",
         "                    inlists= inlists, notinlists= notinlists, imdbsort=  imdbsort, imdborder= imdborder, filterwatched = filterwatched,\n",
@@ -4209,9 +4181,7 @@
         "    if handle.done or handle.transfering:\n",
         "        downloadvbox.progress_bar.value = 100\n",
         "        downloadvbox.progress_label.value = \"100%\"\n",
-        "        downloadvbox.control_btn.disabled = True\n",
-        "        downloadvbox.control_btn.description = \"▷\"\n",
-        "        downloadvbox.remove_btn.disabled = True\n",
+        "        downloadvbox.control_btn.description = \"▷\"        \n",
         "        if handle.transfering:\n",
         "            downloadvbox.progress_bar.bar_style = 'warning'\n",
         "            downloadvbox.speed_label.value = f\"Rate {whitespace3}↓ {speed_str(0)}{whitespace3}↑ {speed_str(0)}\"\n",
@@ -4219,7 +4189,7 @@
         "            downloadvbox.status_label.value = \"Transfering files\"\n",
         "            downloadvbox.remaining_label.value = f\"Remaining {whitespace3}{data_str(0)} / {data_str(status.total_wanted)}\"\n",
         "            downloadvbox.eta_label.value = f\"Estimated {time_str(0)}\"\n",
-        "            downloadvbox.remove_btn.disabled = False\n",
+        "            downloadvbox.remove_btn.disabled = True\n",
         "        elif handle.done:\n",
         "            downloadvbox.progress_bar.bar_style = 'success'\n",
         "            downloadvbox.speed_label.value = f\"Completed at {whitespace3}{time.strftime('%I:%M:%S %p', time.localtime(status.completed_time))}\"\n",
@@ -4227,6 +4197,7 @@
         "            downloadvbox.status_label.value = \"Completed\"\n",
         "            downloadvbox.remaining_label.value = f\"Downloaded {whitespace3}{data_str(status.total_wanted)} / {data_str(status.total_wanted)}\"\n",
         "            downloadvbox.eta_label.value = f\"Uploaded {whitespace3}{data_str(totalupload)}\"\n",
+        "            downloadvbox.remove_btn.disabled = False\n",
         "    else:\n",
         "        if handle.paused:\n",
         "            downloadvbox.status_label.value = 'Paused'\n",
@@ -4647,8 +4618,8 @@
         "searchorder_hbox = HBox((searchorder_dropdown,), layout= t_formrow_layout)\n",
         "\n",
         "searchreplaceandmerge_label = Label(\"Replace Existing\", layout= checkboxlabellayout)\n",
-        "searchreplaceandmerge_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
-        "searchreplace_hbox = HBox((searchreplaceandmerge_label, searchreplaceandmerge_checkbox), layout= t_formrow_layout)\n",
+        "searchreplace_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
+        "searchreplace_hbox = HBox((searchreplaceandmerge_label, searchreplace_checkbox), layout= t_formrow_layout)\n",
         "\n",
         "searchbackup_label = Label(\"Save Backup\", layout= checkboxlabellayout)\n",
         "searchbackup_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
@@ -4857,9 +4828,9 @@
         "addtype_dropdown = Dropdown(description= \"Download Type\", value= MOVIE ,options= [('General', GENERAL), ('Movie', MOVIE), ('Episode', EPISODE), ('Season', SEASON), ('TV Show', SHOW), ('Music Album', ALBUM), ('Song', TRACK)], layout= t2controls_layout, style= t2controls_style)\n",
         "addtype_hbox = HBox((addtype_dropdown,), layout= t_formrow_layout)\n",
         "\n",
-        "addreplacemerge_label = Label(\"Replace and Merge Existing\", layout= checkboxlabellayout)\n",
-        "addreplacemerge_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
-        "addreplacemerge_hbox = HBox((addreplacemerge_label, addreplacemerge_checkbox,), layout= t_formrow_layout)\n",
+        "addreplacemerge_label = Label(\"Replace Existing\", layout= checkboxlabellayout)\n",
+        "addreplace_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
+        "addreplacemerge_hbox = HBox((addreplacemerge_label, addreplace_checkbox,), layout= t_formrow_layout)\n",
         "\n",
         "addbackup_label = Label(\"Save Backup\", layout= checkboxlabellayout)\n",
         "addbackup_checkbox = Checkbox(value= False, style= checkboxstyle)\n",
@@ -5281,14 +5252,15 @@
         "\n",
         "def replace_download_decision(prep_res: Prepare_Result):\n",
         "    userinput_layout = {'width':'600px', 'height':'350px', 'align_items': 'center', 'justify_content': 'flex-start', 'padding': '50px 20px 0 20px', 'border': f'2px solid {LIGHTGREY_COLOR}'}\n",
-        "    userinputbtn_layout = {'width': '130px', 'height':'50px'}\n",
+        "    userinputbtn_layout = {'min_width': '100px', 'height':'50px'}\n",
         "    message_html = HTML(gethtmltext(f'The {prep_res.typestr} \"{prep_res.attrs.name}\" is already downloaded and saved as: {prep_res.foundpath}<br>Do you want to replace old file or rename new download?', fontsize= '16px', color= DARKGERYCOLOR))\n",
         "    row1userinput_box = Box((message_html,), layout= {'width':'99%', 'height':'auto', 'padding':'0 30px', 'margin':'0 0 20px 0'})\n",
-        "    replacemergeoption_btn = Button(description= \"Replace and Merge Files\", layout= userinputbtn_layout)\n",
-        "    replacemergeoption_btn.layout.width = '200px'\n",
+        "\n",
+        "    replaceoption_btn = Button(description= \"Replace\", layout= userinputbtn_layout)\n",
+        "    mergeoption_btn = Button(description= \"Merge\", layout= userinputbtn_layout)\n",
         "    canceloption_btn = Button(description= \"Cancel Download\", layout= userinputbtn_layout)\n",
         "    rename_btn = Button(description= \"Rename New File\", layout= userinputbtn_layout)\n",
-        "    row2userinput_hbox = HBox((replacemergeoption_btn, canceloption_btn, rename_btn), layout= {'justify_content':'space-around','padding':'0 50px', 'margin':'0 0 15px 0', 'width':'100%', 'align_items': 'center'})\n",
+        "    row2userinput_hbox = HBox((mergeoption_btn, replaceoption_btn, canceloption_btn, rename_btn), layout= {'justify_content':'space-around','padding':'0 50px', 'margin':'0 0 15px 0', 'width':'100%', 'align_items': 'center'})\n",
         "\n",
         "    newname_text = Text(description= \"New file name: \",style={'description_width': '100px'}, layout= {'width':'350px ', 'description_width':'120px'})\n",
         "    savename_btn = Button(description= \"OK\", disabled= True, layout= {'height':'30px', 'width':'60px'})\n",
@@ -5303,11 +5275,12 @@
         "    \n",
         "    def renamedownloadaction(b):\n",
         "        newname = newname_text.value.strip()\n",
-        "        return already_downloaded_handler(AlreadyDownloadedDecision(RENAME_DOWNLOAD_DECISION, newname), prep_res.attrs)\n",
+        "        return already_downloaded_handler(AlreadyDownloadedDecision(RENAME_DOWNLOAD, newname), prep_res.attrs)\n",
         "          \n",
         "    newname_text.observe(handletextinputchange, 'value')\n",
-        "    replacemergeoption_btn.on_click(lambda b: already_downloaded_handler(AlreadyDownloadedDecision(REPLACE_MERGE_DOWNLOAD_DECISION), prep_res.attrs))\n",
-        "    canceloption_btn.on_click(lambda b: already_downloaded_handler(AlreadyDownloadedDecision(CANCEL_DOWNLOAD_DECISION), prep_res.attrs))\n",
+        "    replaceoption_btn.on_click(lambda b: already_downloaded_handler(AlreadyDownloadedDecision(REPLACE_DOWNLOAD), prep_res.attrs))\n",
+        "    mergeoption_btn.on_click(lambda b: already_downloaded_handler(AlreadyDownloadedDecision(MERGE_DOWNLOAD), prep_res.attrs))\n",
+        "    canceloption_btn.on_click(lambda b: already_downloaded_handler(AlreadyDownloadedDecision(CANCEL_DOWNLOAD), prep_res.attrs))\n",
         "    savename_btn.on_click(renamedownloadaction)\n",
         "\n",
         "    userinput_vbox = VBox((row1userinput_box, row2userinput_hbox, row3userinput_hbox), layout= userinput_layout)\n",
